src/objects/Project_Funding__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Amount_Calc__c</fullName>
        <formula>Funding__r.ExpectedRevenue * Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocated Amount Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_To__c</fullName>
        <label>Allocated To FY</label>
        <picklist>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>% Allocation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_PF__c</fullName>
        <formula>Funding__r.ExpectedRevenue * 0.35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated PF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Amount_Calc__c</fullName>
        <formula>IF ( 

AND ( 
Funding__r.IsClosed = TRUE, 
Funding__r.IsWon = TRUE 
), 
Allocation__c * Funding__r.Amount, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to Set Fields for Rollup Summaries</inlineHelpText>
        <label>Confirmed Amount Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Funding Request is Closed and Won</inlineHelpText>
        <label>Confirmed Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N300000026cpxEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Discounted_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set by Workflow from Parent Funding Request</description>
        <label>Non Discounted Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Discounted_Funding_Amount__c</fullName>
        <formula>IF (

OR(
Funding__r.IsClosed  = FALSE,

AND (
 Funding__r.IsClosed  = TRUE,
 Funding__r.IsWon  = TRUE
)
),

Allocation__c *  Funding__r.Amount,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Discounted Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Category__c</fullName>
        <inlineHelpText>Direct to Rare-grant funds awarded.  Direct to Project -cash contributions (by partner/BINGO) that don&apos;t come to us but we record as project cost.  Inkind- goods (equipment, computers, furniture) and services,NOT CASH, provided directly to the campaign.</inlineHelpText>
        <label>Payment Category</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to Rare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipName>R00N300000026cfwEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Funding</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Project Funding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>